--- a/job-tracker/package.json
+++ b/job-tracker/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.12.12",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@tanstack/react-query": "^5.71.1",
